--- a/templates/cepheus/compose/auth.yml
+++ b/templates/cepheus/compose/auth.yml
@@ -52,12 +52,11 @@ services:
       redis:
 
     environment:
-      AUTHELIA_JWT_SECRET_FILE: /secrets/jwt_secret
+      AUTHELIA_IDENTITY_VALIDATION_RESET_PASSWORD_JWT_SECRET_FILE: /secrets/jwt_secret
       AUTHELIA_SESSION_SECRET_FILE: /secrets/session_secret
       AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE: /secrets/storage_key
       AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE: /secrets/smtp_pass
       AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD_FILE: /secrets/ldap_pass
-      AUTHELIA_IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY_FILE: /secrets/oidc_key
       AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET_FILE: /secrets/oidc_hmac_secret
 
     volumes:
@@ -65,8 +64,9 @@ services:
       - "{{ app_root }}/authelia/secrets:/secrets"
 
     healthcheck:
-      interval: 4s
+      interval: 60s
       start_period: 30s
+      start_interval: 4s
 
 
     labels:
