--- a/templates/cepheus/compose/miniflux.yml
+++ b/templates/cepheus/compose/miniflux.yml
@@ -10,7 +10,7 @@ services:
     restart: unless-stopped
 
     depends_on:
-      db:
+      miniflux_db:
         condition: service_healthy
 
     networks:
@@ -47,7 +47,7 @@ services:
       homepage.widget.url: http://miniflux:8080
       homepage.widget.key: ${MINIFLUX_API_KEY}
 
-  db:
+  miniflux_db:
     container_name: miniflux_db
     image: postgres:15
     user: 4006:4006
@@ -67,3 +67,5 @@ services:
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "miniflux"]
       start_interval: 5s
+      start_period: 30s
+
