--- a/main.yml
+++ b/main.yml
@@ -87,6 +87,7 @@
   gather_facts: false
   ignore_unreachable: true
   roles:
+    - more_users
     - role: artis3n.tailscale
       tags: tailscale
       vars:
