--- a/templates/web01/compose/games.yml
+++ b/templates/web01/compose/games.yml
@@ -16,7 +16,7 @@ services:
       - web
 
     volumes:
-      - /opt/minecraft/mc-survival-231223-1.20.4:/data
+      - /opt/minecraft/mc-survival-231223-1.21:/data
 
     environment:
       TZ: {{ timezone }}
@@ -26,8 +26,8 @@ services:
       SERVER_NAME: Keelhaul Cay
       MEMORY: 1G
       MOTD: Keelhaul Cay
-      TYPE: FORGE
-      VERSION: 1.20.4
+      TYPE: PAPER
+      VERSION: 1.21
 
     labels:
       traefik.enable: false
