Remove wedding music

--- a/host_tasks/offsite01.yml
+++ b/host_tasks/offsite01.yml
@@ -16,9 +16,9 @@
 
 - name: Grant receive permission to zfs_receiver_cepheus
   tags: zfs, config
-  command: zfs allow -u zfs_receiver_cepheus receive,create,mount hdd/cepheus-nvme01
-  args:
-    creates: /tmp/zfs_allow_zfs_receiver_cepheus_receive_hdd_cepheus-nvme01
+  command: zfs allow -u zfs_receiver_cepheus receive,create,mount,destroy,rollback,compression,xattr,dnodesize,acltype,relatime,recordsize hdd/cepheus-nvme01
+  # args:
+  #   creates: /tmp/zfs_allow_zfs_receiver_cepheus_receive_hdd_cepheus-nvme01
   register: zfs_allow_result
-  changed_when: "'set' in zfs_allow_result.stdout"
+  # changed_when: "'set' in zfs_allow_result.stdout"
     
