--- a/files/cepheus/excludes.conf
+++ b/files/cepheus/excludes.conf
@@ -14,3 +14,6 @@ node_modules/
 /nextcloud/data/updater-*/
 # and neither are more thumbnails
 /nextcloud/data/appdata_*/preview/
+
+# YouTube downloads are big and usually replacable
+/pinchflat/downloads
