Add Tailscale IDP (tsidp)

--- a/templates/cepheus/compose/auth.yml
+++ b/templates/cepheus/compose/auth.yml
@@ -103,3 +103,14 @@ services:
       - "{{ app_root }}/authelia/redis:/data"
     environment:
       TZ: {{ timezone }}
+
+
+  tsidp:
+    image: ghcr.io/arunoruto/tsidp:v1.82.5
+    container_name: tsidp
+    hostname: tsidp
+    networks: 
+      web:
+    environment:
+      TS_AUTHKEY: {{ tailscale_authkey }}
+      VERBOSE: false
