Reduce Karakeep AI tagging context window

--- a/templates/cepheus/compose/ai.yml
+++ b/templates/cepheus/compose/ai.yml
@@ -36,6 +36,9 @@ services:
     networks:
       web:
       ai:
+
+    # environment:
+    #   OLLAMA_DEBUG: "1"
     
     volumes:
       - "{{ app_root }}/ollama:/root/.ollama"
