--- a/templates/cepheus/compose/traefik.yml
+++ b/templates/cepheus/compose/traefik.yml
@@ -1,5 +1,14 @@
 networks:
   web:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.18.0.0/23
+          # Smaller than subnet size, so we can guarantee that there are addresses
+          # outside of the "DHCP range" for containers that need fixed addresses
+          # (just Traefik)
+          ip_range: 172.18.0.0/24
+          gateway: 172.18.0.1
   docker-socket:
 
 services:
@@ -38,8 +47,13 @@ services:
       - traefik.env
 
     networks:
-      - web
-      - docker-socket
+      web:
+        # Some apps need to be able to depend on the IP of the trusted proxies
+        # e.g. Nextcloud, which will refuse to look up a host via DNS
+        # This IP is inside the subnet, but outside the ip_range to avoid
+        # conflicts.
+        ipv4_address: 172.18.1.1
+      docker-socket:
 
     volumes:
       - "{{ app_root }}/traefik/traefik.yml:/traefik.yml"
