Use OpenRouter for Karakeep inference

--- a/templates/cepheus/compose/karakeep.yml
+++ b/templates/cepheus/compose/karakeep.yml
@@ -29,11 +29,12 @@ services:
       DATA_DIR: /data 
       DISABLE_SIGNUPS: true
 
-      OLLAMA_BASE_URL: http://ollama:11434
-      INFERENCE_TEXT_MODEL: llama3.2:latest
-      INFERENCE_IMAGE_MODEL: llava:latest
+      OPENAI_BASE_URL: https://openrouter.ai/api/v1
+      OPENAI_API_KEY: "{{ openrouter_api_key }}"
+      INFERENCE_TEXT_MODEL: google/gemini-2.0-flash-001
+      INFERENCE_IMAGE_MODEL: google/gemini-2.0-flash-001
       EMBEDDING_TEXT_MODEL: nomic-embed-text
-      INFERENCE_CONTEXT_LENGTH: 16384
+      INFERENCE_CONTEXT_LENGTH: 131072
 
       DISABLE_PASSWORD_AUTH: true
       OAUTH_WELLKNOWN_URL: https://auth.{{ tertiary_domain }}
