--- a/templates/cepheus/compose/traefik.yml
+++ b/templates/cepheus/compose/traefik.yml
@@ -14,7 +14,7 @@ networks:
 services:
   docker-socket-proxy:
     container_name: docker-socket-proxy
-    image: ghcr.io/tecnativa/docker-socket-proxy:0.3.0
+    image: lscr.io/linuxserver/socket-proxy:latest
     restart: unless-stopped
 
     environment:
