Tweak Backblaze excludes

--- a/files/cepheus/excludes.conf
+++ b/files/cepheus/excludes.conf
@@ -16,4 +16,8 @@ node_modules/
 /nextcloud/data/appdata_*/preview/
 
 # YouTube downloads are big and usually replacable
-/pinchflat/downloads
+/pinchflat/downloads/
+
+# Exclude redownloadable AI files
+/open_webui/cache/
+/ollama/
